add: Chapter 14 chunks of byte code with const value array and line tracking array

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,10 @@ add_executable(clox
         common.h
         chunk.c
         chunk.h
+        memory.h
+        memory.c
+        debug.c
+        debug.h
+        value.c
+        value.h
 )
